se agrego los test para google y huawei